[IMP] make always visible customer signature tab

--- a/bista_sales_approval/views/sale_order_approval_button_view.xml
+++ b/bista_sales_approval/views/sale_order_approval_button_view.xml
@@ -46,6 +46,9 @@
                     </field>
                 </page>
             </notebook>
+            <page name="customer_signature" position="attributes">
+                <attribute name="groups" />
+            </page>
         </field>
     </record>
 
