[IMP] Fields added and removed in as given sheet,resolved Feature #17871,Bug #18132,Bug #18437,Feature #18074,Bug #18436

--- a/bista_contact/views/res_partner_views.xml
+++ b/bista_contact/views/res_partner_views.xml
@@ -15,9 +15,11 @@
                             <field name="customer_status"/>
                             <field name="dead_resone" attrs="{'invisible': [('customer_status', '!=', 'dead')]}"/>
                             <field name="block" invisible="1"/>
+                            <field name="email_opt_out"/>
                         </group>
                         <group>
                             <field name="do_not_call"/>
+                            <field name="account_spend"/>
                             <field name="dead_date" attrs="{'invisible': [('customer_status', '!=', 'dead')]}"/>
                         </group>
                     </group>
