[IMP] Removed Po Name Field And Shown How many Products Purchased by vendor In Contact.

--- a/bista_contact/views/res_partner_views.xml
+++ b/bista_contact/views/res_partner_views.xml
@@ -45,6 +45,8 @@
                             <field name="source"/>
                             <field name="source_notes"/>
                             <field name="referal_source"/>
+                            <separator string="Products Purchase"/>
+                            <field name="purchase_product_ids" nolabel="1" widget="many2many_tags"/>
                         </group>
                     </group>
                 </page>
