--- a/bista_purchase/views/purchase_tracking_views.xml
+++ b/bista_purchase/views/purchase_tracking_views.xml
@@ -37,10 +37,10 @@
                         </page>
                         <page name="products" string="Products">
                             <group>
-                                <field name="checkbox" string="All pending to shipped" attrs="{'readonly': [('is_read_only', '=', True)]}" />
+                                <field name="checkbox" string="Ship all quantity" attrs="{'readonly': [('is_read_only', '=', True)]}" />
                             </group>
                             <field name="tracking_line_ids" attrs="{'readonly': [('is_read_only', '=', True)]}">
-                                <tree create="0" delete="0" default_order="ship_qty desc">
+                                <tree create="0" delete="0" default_order="ship_qty desc" editable="bottom">
                                     <field name="po_line_id" readonly="1" force_save="1" />
                                     <field name="default_code" optional="show" />
                                     <field name="ordered_qty" />
@@ -48,15 +48,6 @@
                                     <field name="pending_shipment_qty" />
                                     <field name="ship_qty" />
                                 </tree>
-                                <form>
-                                    <group>
-                                        <field name="default_code" />
-                                        <field name="ordered_qty" />
-                                        <field name="received_qty" />
-                                        <field name="pending_shipment_qty" />
-                                        <field name="ship_qty" />
-                                    </group>
-                                </form>
                             </field>
                         </page>
                     </notebook>
