--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -162,10 +162,9 @@
                 </page>
                 <page name="shipment_tracking" string="Shipment Tracking"
                       attrs="{'invisible':[('state','not in',['purchase','done'])]}">
-                    <button name="open_tracking" type="object" string="Create Tracking" class="btn btn-primary"
-                            context="{'new':1}"/>
+                    <button name="open_tracking" type="object" string="Create Tracking" class="btn btn-primary" />
                     <field name="purchase_tracking_ids" readonly="0">
-                        <tree string="Purchase Tracking Tree" create="0" write="0" editable="bottom">
+                        <tree string="Purchase Tracking Tree" create="0" write="0">
                             <field name="name" readonly="1"/>
                             <field name="shipment_date" required="1" optional="show" readonly="1"/>
                             <field name="carrier_id" optional="show" readonly="1"/>
